# asl-2022

./: .gitignore  CMakeLists.txt  Makefile  README.md  baseline1  compile_verification.txt  questions_TA.txt  random_matrix_generator
code/: Makefile  compiler_test.sh  mmm_runner.sh  perf_runner.sh  rectangular_runner.sh  rooflines_mmm.sh  rooflines_opt.sh  run_perf.sh
code/include/: asl.h
code/include/baselines/: baseline1.h  baseline2.h  baselines_utils.h
code/include/mmm/: mmm_0.h  mmm_1.h  mmm_2.h  mmm_3.h  mmm_4.h
code/include/optimizations/: alg_opt_1.h  alg_opt_2.h  optimizations_0.h  optimizations_1.h  optimizations_11.h  optimizations_12.h  optimizations_2.h  optimizations_21.h  optimizations_22.h  optimizations_23.h  optimizations_24.h  optimizations_3.h  optimizations_31.h  optimizations_32.h  optimizations_33.h  optimizations_34.h  (+23 more)
code/tests/: generate_truth.py  test_padded_matrix.py  tests.c
docs/outputs/: opt_rooflines_bad.html
docs/profiling/: profiling_report.tex
docs/report/: optimizations.txt  questions_TAs.txt  report_notes.txt
plots/: plots.py  settings.json
plotting/: plots.py
plotting/benchmark/: plots.py  settings.json
plotting/performance/: settings.json
report/: report_notes.txt
src/asl_utils/: asl_utils.c  asl_utils.h
src/baseline1/: baseline1.c  baseline1.h  random_matrix_generator.c  run_baseline1.c
src/baseline2/: CMakeLists.txt  baseline2.c  baseline2.h  report_notes.txt  run_baseline2.c  test_environment.c  test_run_mac.sh
src/performance/: performance.c
src/verification/: verify.c  verify.h
(+430 files in other folders)
